--- a/VRChat/38/1267938.html
+++ b/VRChat/38/1267938.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QWLRE78u6c44NZulq9UUoYf5JepSCSA2tc2nnrdblgk="></script>
+    "jkS+iz4ZASHVfUE/OLP6a1xa6HvNMU1Zf9ayrVmeYFk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　『そうちゃん』 Ver. 4.0.0","description":"VRChatでの利用を想定したオリジナル3Dモデル「たれみみわんこのそうちゃん」です！\nそうちゃんは、たれみみわんこの優しい女の子です。たくさんかわいがって頂けるとうれしいです！\n\n★追記2021/10/22：\nバージョン4.0アップデート公開しました！\nVRChatSDK3(Avatars3.0対応)などが含まれますので是非ダウンロードしてご利用ください。","url":"https://booth.pm/ja/items/1267938","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2111"},"image":"https://booth.pximg.net/c/620x620/465602c8-5ac9-4be4-963f-6e2cd3d662ca/i/1267938/87fef25a-bdcc-497a-a601-3c60111b9edf_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QWLRE78u6c44NZulq9UUoYf5JepSCSA2tc2nnrdblgk="></script>
+    nonce="jkS+iz4ZASHVfUE/OLP6a1xa6HvNMU1Zf9ayrVmeYFk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -181,7 +181,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1267938/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               869
@@ -196,14 +196,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1267938/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               869
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
