--- a/VRChat/06/1267706.html
+++ b/VRChat/06/1267706.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yNIDDsMMtDVRgXnkYde2O2uwaRiPtqsPfOzOnACyD3M="></script>
+    "NMYc4jgDheH5nhTpKJJzcj/rqpAkNYSeGnFtJ3FKhgI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"旅するかに","description":"3Dモデル「旅するかに」\n\n\n◆本モデルはBOOTHにて無料配布中の「かに」モデルの改変例となっております。\n目の間と背中に椅子を仕込んでおり、お友達と一緒にちょっと変わった旅行気分を味わえます。\n改変モデル制作の際は通常版のかにをご利用ください。\n\n\n◆制作者\nやふ\n\n\n◆内容物\nTABIKANI.unitypackage\nテクスチャ(PNGファイル)\nテクスチャ改変用PSDファイル\nREADME\n\n\n◆導入方法\n１：Unity(2017.4.15.f1)を立ち上げます。\n\n２：「VRCSDK」と「UTS2_ShaderOnly_v2.0.5」をインポートしてください。\n　ダウンロード先\n　・VRCSDK\n　　https://www.vrchat.net/\n　　ログイン後、DownloadタブのCONTENT CREATIONから最新版がDownloadできます。\n\n　・UTS2_ShaderOnly_v2.0.5\n　　http://unity-chan.com/download/releaseNote.php?id=UTS2_0\n　　（最新版はv2.0.6ですが現在本モデルはv2.0.5で設定されております。v2.0.6での動作は現在のところ保証外です。すみません…）\n\n３：「TABIKANI.unitypackage」をインポート\n\n４：asset内のprefabデータをHierarchyにドロップ\n\n５；上部メニューバーの「VRChat SDK」の「Show Build Control Panel」から「Build ＆　Publish」を選択\n　　以降画面の指示に従い、情報を記入しアバターをアップロードしてください。\n　　※Sharingの項目は必ずPrivateにしてください。Publicでのアップロードは利用規約違反となります。\n\n\n◆利用規約\n本モデルをダウンロードした時点で利用規約に同意したものとします。\n\n◇改変・商用利用可能\n\n◇R-18、R-18Gコンテンツへの利用は禁止します。\n\n◇改変モデルの個人利用を目的とした無料配布は可能としますが、無改変モデルの再配布及び無改変・改変モデル単体の有料販売は禁止します。\n\n◇政治、宗教、他者に対する誹謗中傷目的での本モデル及び改変モデルの使用は禁止します。\n\n◇無改変モデルの自作発言は禁止します。\n\n◇本モデル及び改変モデルを利用したことによって発生したトラブルや損失に対して\n　制作者やふは一切責任を負いません。\n\n\n制定日\n2019/3/10","url":"https://booth.pm/ja/items/1267706","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b9f12138-14d4-4edd-b61c-c86c8c2cf6fb/i/1267706/448a070b-5440-4b60-8dc2-99f22243158f_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yNIDDsMMtDVRgXnkYde2O2uwaRiPtqsPfOzOnACyD3M="></script>
+    nonce="NMYc4jgDheH5nhTpKJJzcj/rqpAkNYSeGnFtJ3FKhgI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1267706/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               83
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1267706/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               83
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
