--- a/VRChat/45/1267245.html
+++ b/VRChat/45/1267245.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jzphnGBCrOj7PT+azdIXUrWPTw1NfntErGy9W7xXzeo="></script>
+    "igbdiVtxl6mPk5bXeZi15fID9bz9M8mLPld4tW2PHVI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル ハート型チョコレート\u0026ホワイトチョコ","description":"チョコレートとホワイトチョコです。\nホワイトデーが近いのでお返しとかにどうぞ。\nマテリアルで色指定してるだけなのでUVは展開してません。\n三角面は2596ポリです。\nUnity2017.4.15f1想定です。unitypackage形式のデータが入ってます。\n再配布、特定個人の攻撃、宗教利用以外の用途ならどう使ってもらっても大丈夫です。","url":"https://booth.pm/ja/items/1267245","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/7ccecc94-6a4c-43c7-a312-a5d445ab9609/i/1267245/99002616-215a-426a-bc09-e26946917b1b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jzphnGBCrOj7PT+azdIXUrWPTw1NfntErGy9W7xXzeo="></script>
+    nonce="igbdiVtxl6mPk5bXeZi15fID9bz9M8mLPld4tW2PHVI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1267245/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1267245/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
