--- a/VRChat/53/1266953.html
+++ b/VRChat/53/1266953.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+cNbqXw6Ryh0WVDG7LG4LL4epF1XZwD6Y1GfUaiQIfM="></script>
+    "16tbJAXQhRlqB7QUwtxAVnrV6tMWaCCu+64aiQn86Gc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『VRoid\u0026セシル変身』ベルトブーツセット(ブラック：ブラウン)","description":"【利用契約および設定方法】\n※ご購入前にお読みください。\n\n【購入した商品の利用は自由です】\n『再配布』することは禁止ですが、それ以外の制限はとくにございません。\nVRoid制作はもちろん。\nUnity経由でVRchatへ。\nセシル変身用に使ったり。\n変換してMMDやその他への流用。\nゲーム制作や改変しての使用などなど。\nご自由にお使いください！\nなおクレジット表記は任意で大丈夫です。\n気にせずお使いください！\n\nあなたの理想を形に。\n『犬子屋』はVRoid活動を応援しています。\n\n追記。\nショップ、ツイッターのフォロー、ハートマークのプッシュをお願いします！\nリツイートやいいねも待ってます！\n制作者の励みになります！\n↓こちらだよ(≧∇≦)\nhttps://twitter.com/Isekaiinuko?s=09\n\nそれとツイートの際は是非\n#犬子屋 と書いてツイートしください。\n拝見させていただきます！","url":"https://booth.pm/ja/items/1266953","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/f22bc1b2-b53f-45cb-ab46-6930cde3bab7/i/1266953/79582dc8-11c0-42dd-ba8c-4bededeee9b1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+cNbqXw6Ryh0WVDG7LG4LL4epF1XZwD6Y1GfUaiQIfM="></script>
+    nonce="16tbJAXQhRlqB7QUwtxAVnrV6tMWaCCu+64aiQn86Gc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1266953/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               86
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1266953/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               86
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
