--- a/VRChat/70/1266870.html
+++ b/VRChat/70/1266870.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3e5NKVntlO5aLP/q7/W3V6nNUNbuSDftWcDb8JXA4WU="></script>
+    "agEESfR1ICoNix7bTAFFcgaE5XJZmI3B4VPGCR5GeRo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"PBT-Shader","description":"Unity用トゥーンシェーダです。\nセルルックを維持しつつ、リアリスティックな質感を両立できます。\nSubstance Painterなどで作成したUnity用PBRテクスチャをそのまま使えるため、UnityのStandardシェーダからそのまま移行できます。","url":"https://booth.pm/ja/items/1266870","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1266870/ebe6dd10-00b1-48d2-be32-9e33fd9f174e_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3e5NKVntlO5aLP/q7/W3V6nNUNbuSDftWcDb8JXA4WU="></script>
+    nonce="agEESfR1ICoNix7bTAFFcgaE5XJZmI3B4VPGCR5GeRo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -121,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -135,7 +134,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -176,10 +176,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1266870/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1008
+                              1009
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -191,14 +191,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1266870/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1008
+                              1009
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
