--- a/VRChat/69/1266869.html
+++ b/VRChat/69/1266869.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YXGBOnXFEVFJWo3NEydwvf0sn0ureESRA7I3ardQ6u4="></script>
+    "43c678m4NV7C52OzOquw/TxhBu+vnFd6YnYAj7jXt5o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナルアバター「あおい」","description":"オリジナルアバター「あおい」 紹介文\n\n□□オリジナルアバター「あおい」□□\n\n本モデルはVRChatでの使用を想定して制作されています。\n\n・ポリゴン数: 23855△\n・ OVRLipsync: 15種類\n・ BlendShape: 54種類\n・ アニメーションオーバーライド設定済み 2種\n・リップシンク、アイトラッキング対応\n・arktoon-shaders 設定済\n・VRC SDK 設定済\n\n□同梱データ□\n\n・3Dモデルfbxデータ\n\naoi.fbx: モデル本体\nmegane.fbx: メガネ\n\n・テクスチャpngデータ\n\nモデル用テクスチャ\nhead.png\nhair.png\nme.png\nte.png\nhuku2.png\nhuhuu2.png\n@k0ara.png\n22.png\n\n\nMatCap用\na.png\nm.png\nh.png\nw.png\n\n\n・UnityPackageデータ\nAOI.unitypackage\n\nReadme.txt\n\n\n□利用規約\n・本モデルを使用した時点で、利用規約に同意したものとみなします。\n・色替えや改造、付属のメガネをほかモデルに装備するなど、ご自由にどうぞ。\n・VRC以外の媒体（ゲーム、アニメーション、アプリ）での使用も可能です\n・営利利用、収益化なども制限しません。\n・R-18・R-18Gへの利用は制限しませんが、住み分けはしっかり行ってください。\n\n□禁止事項\n\n・公序良俗、良識に反する使用。\n・政治、宗教的利用、他者、他団体を傷つけたり陥れる行為への使用。\n・自作発言\n・購入者以外の方がモデルデータを使用できる状態にすること\n（再配布、アバターペデスタル及びアバタークローン化など）\n\n□免責事項\n\n・本モデルを使用して発生したいかなる損害、損失、不利益に関して、\n　当方は一切の責任を負いません。\n\n\n□導入方法\n\n①Unity 2017.4.15f1で新規プロジェクトを作成。\n\n②VRCSDKとarktoon-shadersをインポートします。\n\n③同様に本データ付属のAOI.unitypackageをインポートします。\n\n④aoi.prepabをHierarchyに置き、VRCSDKを用いてアップロードをおこなってください。\n\n\n_________________________________________________________\n\nその他不明事項等、何かありましたらご連絡ください。\n\n製作者: 作成参謀\n\ntwitter: @sakuseisanbo\n","url":"https://booth.pm/ja/items/1266869","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/20bbf43f-f3fa-4bdf-b36d-12828e517996/i/1266869/fb720ecf-5eae-4a01-927d-c8dc2713f8bd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YXGBOnXFEVFJWo3NEydwvf0sn0ureESRA7I3ardQ6u4="></script>
+    nonce="43c678m4NV7C52OzOquw/TxhBu+vnFd6YnYAj7jXt5o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1266869/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               116
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1266869/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               116
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
