--- a/VRChat/43/1263943.html
+++ b/VRChat/43/1263943.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PgauVTbKqSNX5/Z2cZmw9yTAGQAo/7LSquNn7d+d7/w="></script>
+    "mOMNGlEh0tArpYVDa+yWb+nnNZa39zGh7U8kGcEF3uc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"水無月ルアVer4.00【オリジナル3Dモデル】VRChat\u0026VRM対応","description":"〇こちらの３Dモデルは水無月カヲルが製作したものになっています。\n\n〇VRChat用アバター（Default＆スクール水着＆チャイナ服）、VRM用アバター（Default＆スクール水着＆チャイナ服）の計4種類を梱包しています。\n\n【Default】\n〇ポリゴン数　△30059polygon\n〇メッシュ数　3\n〇マテリアルスロット数　3\n〇ボーン数　115\n〇DynamicBone　設定済み（別途購入）\n〇リップシンク設定済み\n〇オーバーライド（表情差分）設定済み\n\n【スクール水着】\n〇ポリゴン数　△31956polygon\n〇メッシュ数　3\n〇マテリアルスロット数　3\n〇ボーン数　117\n〇DynamicBone　設定済み（別途購入）\n〇リップシンク設定済み\n〇オーバーライド（表情差分）設定済み\n\n【チャイナ服】\n〇ポリゴン数　△27880polygon\n〇メッシュ数　3\n〇マテリアルスロット数　3\n〇ボーン数　115\n〇DynamicBone　設定済み（別途購入）\n〇リップシンク設定済み\n〇オーバーライド（表情差分）設定済み","url":"https://booth.pm/ja/items/1263943","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/a19ba3ba-41bc-4115-8b35-10de24d6e4b9/i/1263943/aaf73ddc-4454-4562-bf10-19847c665d73_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PgauVTbKqSNX5/Z2cZmw9yTAGQAo/7LSquNn7d+d7/w="></script>
+    nonce="mOMNGlEh0tArpYVDa+yWb+nnNZa39zGh7U8kGcEF3uc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263943/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               86
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263943/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               86
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
